--- a/views/base.pug
+++ b/views/base.pug
@@ -9,7 +9,7 @@ html
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
       title Natours | #{title}
   
-  body
+  body(data-alert=`${alear ? alert : ''}`)
     // HEADER
     include _header
         
